--- a/index.html
+++ b/index.html
@@ -18,7 +18,122 @@
 
 <body>
 
-    <h1 class="bg-primary"> My heading</h1>
+    <!-- header part start -->
+    <nav class="navbar navbar-expand-md py-5">
+        <div class="container">
+            <a class="navbar-brand fw-bold fs-1" href="#">Westside</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
+                    <li class="nav-item mx-3">
+                        <a class="nav-link" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item mx-lg-3">
+                        <a class="nav-link" href="#">Deal</a>
+                    </li>
+                    <li class="nav-item mx-lg-3">
+                        <a class="nav-link" href="#">Courses</a>
+                    </li>
+                    <li class="nav-item mx-lg-3">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item mx-lg-3">
+                        <a class="nav-link" href="#">Success</a>
+                    </li>
+                    <li class="nav-item me-lg-5">
+                        <a class="nav-link" href="#">Register</a>
+                    </li>
+                    <li class="mt-2"><a class="text-decoration-none rounded px-4 py-2 border border-3 border-primary"
+                            href="#">Register
+                        </a></li>
+
+
+                </ul>
+
+            </div>
+        </div>
+    </nav>
+
+
+
+    <!-- header part end -->
+
+
+    <main>
+        <!-- banner part start -->
+
+
+
+        <section>
+            <div class="container">
+                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+
+                    <div class="carousel-inner">
+                        <div class="carousel-item active w-100">
+                            <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-md-block mb-md-5">
+                                <h5 class="fs-1 fs-sm-5 fw-bold top">Technology is all around you</h5>
+                                <p class="w-75 m-auto fs-6 mb-5">When we look around us, we see a huge number of
+                                    examples of
+                                    technology.
+                                    The mobile
+                                </p>
+                                <a class="text-decoration-none text-white px-5 py-3 bg-primary rounded fs-5"
+                                    href="#">Get
+                                    Started
+                                </a>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/cover/cover-3.jpg" class="d-block w-100 img-fluid h-auto" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Second slide label</h5>
+                                <p>Some representative placeholder content for the second slide.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/cover/cover-3.jpg" class="d-block w-100 img-fluid h-auto" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Third slide label</h5>
+                                <p>Some representative placeholder content for the third slide.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </section>
+        <!-- banner part end -->
+
+
+        <!-- Course part start -->
+
+        <section class="mt-5">
+            <div>
+                <h1>Enroll Our Latest Courses</h1>
+                <p>Technology is so important in today’s world that it is almost impossible to imagine a life without it
+                </p>
+            </div>
+        </section>
+
+
+        <!-- Course part end -->
+    </main>
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js
