course part done

--- a/index.html
+++ b/index.html
@@ -122,11 +122,127 @@
         <!-- Course part start -->
 
         <section class="mt-5">
-            <div>
-                <h1>Enroll Our Latest Courses</h1>
-                <p>Technology is so important in today’s world that it is almost impossible to imagine a life without it
+            <div class="text-center
+            ">
+                <h1 class="fs-1 fw-bold">Enroll Our Latest Courses</h1>
+                <p class="w-50 m-auto ">Technology is so important in today’s world that it is almost impossible to
+                    imagine a
+                    life without
+                    it.When we look around us, almost everything is a result of or a form of technology.
                 </p>
             </div>
+            <div class="container mt-5">
+
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="main my-3 border rounded d-md-flex">
+                            <div class="img">
+                                <img src="images/course/course-1.png" class="w-100 h-100" alt="">
+                            </div>
+                            <div class="text p-3">
+                                <h3>Photography Basic Rules
+                                </h3>
+                                <p>Photography is the art, application, and practice of creating durable images by
+                                    recording
+                                    light, either electronically by means of</p>
+                                <span class="fs-4 text-primary fw-bold">Price:250$</span>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="main my-3 border rounded d-md-flex">
+                            <div class="img">
+                                <img src="images/course/course-2.png" class="w-100 h-100" alt="">
+                            </div>
+                            <div class="text p-3">
+                                <h3>Fullstack Web Development
+
+                                </h3>
+                                <p>Photography is the art, application, and practice of creating durable images by
+                                    recording
+                                    light, either electronically by means of</p>
+                                <span class="fs-4 text-primary fw-bold">Price:250$</span>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="main my-3 border rounded d-md-flex">
+                            <div class="img">
+                                <img src="images/course/course-3.png" class="w-100 h-100" alt="">
+                            </div>
+                            <div class="text p-3">
+                                <h3>Fundamental Of UI/UX Design
+
+                                </h3>
+                                <p>Photography is the art, application, and practice of creating durable images by
+                                    recording
+                                    light, either electronically by means of</p>
+                                <span class="fs-4 text-primary fw-bold">Price:250$</span>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="main my-3 border rounded d-md-flex">
+                            <div class="img">
+                                <img src="images/course/course-4.png" class="w-100 h-100" alt="">
+                            </div>
+                            <div class="text p-3">
+                                <h3>Javascript Basic to advanced
+
+                                </h3>
+                                <p>Photography is the art, application, and practice of creating durable images by
+                                    recording
+                                    light, either electronically by means of</p>
+                                <span class="fs-4 text-primary fw-bold">Price:250$</span>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="main my-3 border rounded d-md-flex">
+                            <div class="img">
+                                <img src="images/course/course-5.png" class="w-100 h-100" alt="">
+                            </div>
+                            <div class="text p-3">
+                                <h3>Digital Marketing
+
+                                </h3>
+                                <p>Photography is the art, application, and practice of creating durable images by
+                                    recording
+                                    light, either electronically by means of</p>
+                                <span class="fs-4 text-primary fw-bold">Price:250$</span>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="main my-3 border rounded d-md-flex">
+                            <div class="img">
+                                <img src="images/course/course-1.png" class="w-100 h-100" alt="">
+                            </div>
+                            <div class="text p-3">
+                                <h3>Photography Basic Rules
+                                </h3>
+                                <p>Photography is the art, application, and practice of creating durable images by
+                                    recording
+                                    light, either electronically by means of</p>
+                                <span class="fs-4 text-primary fw-bold">Price:250$</span>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+
+                </div>
+
+
+            </div>
+
+
         </section>
 
 
