--- a/index.html
+++ b/index.html
@@ -88,20 +88,38 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <img src="images/cover/cover-3.jpg" class="d-block w-100 img-fluid h-auto" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Second slide label</h5>
-                                <p>Some representative placeholder content for the second slide.</p>
+                        <div class="carousel-item active w-100">
+                            <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-md-block mb-md-5">
+                                <h5 class="fs-1 fs-sm-5 fw-bold top">Technology is all around you</h5>
+                                <p class="w-75 m-auto fs-6 mb-5">When we look around us, we see a huge number of
+                                    examples of
+                                    technology.
+                                    The mobile
+                                </p>
+                                <a class="text-decoration-none text-white px-5 py-3 bg-primary rounded fs-5"
+                                    href="#">Get
+                                    Started
+                                </a>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <img src="images/cover/cover-3.jpg" class="d-block w-100 img-fluid h-auto" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Third slide label</h5>
-                                <p>Some representative placeholder content for the third slide.</p>
+                        <div class="carousel-item active w-100">
+                            <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-md-block mb-md-5">
+                                <h5 class="fs-1 fs-sm-5 fw-bold top">Technology is all around you</h5>
+                                <p class="w-75 m-auto fs-6 mb-5">When we look around us, we see a huge number of
+                                    examples of
+                                    technology.
+                                    The mobile
+                                </p>
+                                <a class="text-decoration-none text-white px-5 py-3 bg-primary rounded fs-5"
+                                    href="#">Get
+                                    Started
+                                </a>
                             </div>
                         </div>
+
+
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                         data-bs-slide="prev">
