--- a/index.html
+++ b/index.html
@@ -256,6 +256,10 @@
 
 
                 </div>
+                <div class="text-center my-5">
+                    <button class="btn border rounded bg-info text-white fs-5 m-auto">See More Courses</button>
+                </div>
+
 
 
             </div>
@@ -265,6 +269,67 @@
 
 
         <!-- Course part end -->
+
+
+        <!-- Explore part start -->
+        <section class="mb-5">
+            <div class="container">
+                <div class="main d-md-flex align-items-center rounded bg-info">
+                    <div class="left">
+                        <img src="images/working.png" class="prob" alt="">
+                    </div>
+                    <div class="right p-5">
+                        <h1 class="mb-3">Explore The elearning
+                            Institute</h1>
+                        <p>
+                            There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour, or
+                            randomised words which don't look even slightly believable. If you are going
+                            to use a passage of Lorem Ipsum, you need to be sure.
+
+
+                            Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
+                            generators on the Internet tend to repeat predefined
+                        </p>
+                        <div class="number d-flex my-md-5">
+                            <div class="one me-3">
+                                <h1 class="fw-bold">3.2K+</h1>
+                                <p>Online Course
+                                </p>
+                            </div>
+                            <div class="one mx-3">
+                                <h1 class="fw-bold">600+</h1>
+                                <p>Student
+                                </p>
+                            </div>
+                            <div class="one mx-3">
+                                <h1 class="fw-bold">1K+</h1>
+                                <p>Rating & Review
+                                </p>
+                            </div>
+                        </div>
+                        <button class="btn px-4 py-2 border text-white bg-dark">Read More</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- Explore part end -->
+
+        <!-- Register part start -->
+        <div class="container mt-5">
+            <div class="left">
+                <h1>Ready To Join</h1>
+                <p>It is a long established fact that a reader will be distracted by the
+                    readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="right"></div>
+        </div>
+
+
+
+        <!-- Register part end -->
     </main>
 
 
