--- a/index.html
+++ b/index.html
@@ -319,12 +319,44 @@
 
         <!-- Register part start -->
         <div class="container mt-5">
-            <div class="left">
-                <h1>Ready To Join</h1>
-                <p>It is a long established fact that a reader will be distracted by the
-                    readable content of a page when looking at its layout.</p>
+            <div class="main d-lg-flex bg-primary p-5 align-items-center justify-content-between rounded">
+                <div class="left text-white">
+                    <h1 class="mb-5">programming is an art</h1>
+                    <p class="w-75">It is a long established fact that a reader will be distracted by the
+                        readable content of a page when looking at its layout.</p>
+                </div>
+                <div class="right">
+                    <div class="final">
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-white text-primary bg-white fs-4 fw-bold px-4"
+                            data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            Register Now
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        Hey,How are you?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="right"></div>
         </div>
 
 
