--- a/index.html
+++ b/index.html
@@ -360,8 +360,69 @@
         </div>
 
 
-
         <!-- Register part end -->
+        <!-- Member part start -->
+
+        <section>
+            <div class="container">
+                <div class="title my-5">
+                    <h1>Our Creative Members</h1>
+                    <p class="w-50 fs-5 text-black-50">It is a long established fact that a reader will be distracted by
+                        the
+                        readable content of a page when looking at its layout.</p>
+                </div>
+                <div class="member">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="one border rounded my-5">
+                                <img src="images/student/student-3.png" class="img-fluid pb-3 w-100" alt="">
+                                <h4 class="ps-4">Imran Hossain
+                                </h4>
+                                <p class="ps-4">Graphic Designer</p>
+                            </div>
+
+                        </div>
+
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="one border rounded my-5">
+                                <img src="images/student/student-2.png" class="img-fluid pb-3 w-100" alt="">
+                                <h4 class="ps-4">Bella Hadid
+                                </h4>
+                                <p class="ps-4">Graphic Designer</p>
+                            </div>
+
+                        </div>
+
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="one border rounded my-5">
+                                <img src="images/student/student-4.png" class="img-fluid pb-3 w-100" alt="">
+                                <h4 class="ps-4">Ashiqur Rahman
+                                </h4>
+                                <p class="ps-4">Graphic Designer</p>
+                            </div>
+
+                        </div>
+
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="one border rounded my-5">
+                                <img src="images/student/student-1.png" class="img-fluid pb-3 w-100" alt="">
+                                <h4 class="ps-4">Habib Jaman
+                                </h4>
+                                <p class="ps-4">Graphic Designer</p>
+                            </div>
+
+                        </div>
+
+
+                    </div>
+                    <div class="text-center mb-5">
+                        <div class="btn btn-primary py-2 px-5">View All</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Member part end -->
     </main>
 
 
