--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- Bootstrap css link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css
     ">
+    <!-- font awesome -->
+
+    <script src="https://kit.fontawesome.com/f5e67f8077.js" crossorigin="anonymous"></script>
 
     <!-- Custom css start -->
 
@@ -423,6 +426,97 @@
         </section>
 
         <!-- Member part end -->
+        <!-- Feedback part start -->
+        <section id="feedback">
+            <div class="title text-center my-md-5">
+                <h1>Honourable Teacher's Feedback</h1>
+                <p class="w-50 m-auto">We must keep our food cold so that it is not spoilt by being out in the warm
+                    weather.
+                    This concept of
+                    science helped scientists develop technology to keep our food cold</p>
+            </div>
+
+            <div class="container">
+
+                <div class="row">
+                    <div class="col-lg-6 col-md-12 col-sm-12">
+                        <div class="feedback border p-5 rounded">
+                            <div class="arrow">
+                                <i class="fa-solid fa-angle-left"></i>
+                            </div>
+                            <div class="top d-flex justify-content-between mb-5">
+                                <div class="img">
+                                    <img src="images/comma.png" alt="">
+                                </div>
+                                <div class="icon text-warning">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half"></i>
+
+                                </div>
+                            </div>
+                            <p>Technology is so important in today’s world that it is almost impossible to imagine a
+                                life without it. Could you imagine what you would do if you weren’t able to watch
+                                television every once? Or what would you do if you were unable to talk to your
+                                grandmother who lives away from you on the phone for some time now and then?</p>
+                            <div class="last d-flex align-items-center">
+                                <div class="img me-4">
+                                    <img src="images/student/student-5.png" class="img-fluid" alt="">
+                                </div>
+                                <div class="text">
+                                    <h5>Rafiq Zaman</h5>
+                                    <p>Developper</p>
+                                </div>
+
+
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12">
+                        <div class="feedback border p-5 rounded">
+                            <div class="arrow-right">
+                                <i class="fa-solid fa-angle-right"></i>
+                            </div>
+                            <div class="top d-flex justify-content-between mb-5">
+                                <div class="img">
+                                    <img src="images/comma.png" alt="">
+                                </div>
+                                <div class="icon text-warning">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half"></i>
+
+                                </div>
+                            </div>
+                            <p>Technology is so important in today’s world that it is almost impossible to imagine a
+                                life without it. Could you imagine what you would do if you weren’t able to watch
+                                television every once? Or what would you do if you were unable to talk to your
+                                grandmother who lives away from you on the phone for some time now and then?</p>
+                            <div class="last d-flex align-items-center">
+                                <div class="img me-4">
+                                    <img src="images/student/student-5.png" class="img-fluid" alt="">
+                                </div>
+                                <div class="text">
+                                    <h5>Rafiq Zaman</h5>
+                                    <p>Developper</p>
+                                </div>
+
+
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <!-- Feedback part end -->
     </main>
 
 
