--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 
                 <div class="row">
                     <div class="col-lg-6 col-md-12 col-sm-12">
-                        <div class="feedback border p-5 rounded">
+                        <div class="feedback border p-5 rounded my-3">
                             <div class="arrow">
                                 <i class="fa-solid fa-angle-left"></i>
                             </div>
@@ -476,7 +476,7 @@
 
                     </div>
                     <div class="col-lg-6 col-md-12 col-sm-12">
-                        <div class="feedback border p-5 rounded">
+                        <div class="feedback border p-5 rounded mb-3 my-3">
                             <div class="arrow-right">
                                 <i class="fa-solid fa-angle-right"></i>
                             </div>
@@ -499,11 +499,11 @@
                                 grandmother who lives away from you on the phone for some time now and then?</p>
                             <div class="last d-flex align-items-center">
                                 <div class="img me-4">
-                                    <img src="images/student/student-5.png" class="img-fluid" alt="">
+                                    <img src="images/student/student-6.png" class="img-fluid" alt="">
                                 </div>
                                 <div class="text">
-                                    <h5>Rafiq Zaman</h5>
-                                    <p>Developper</p>
+                                    <h5>Sadia Zaman</h5>
+                                    <p>Designer</p>
                                 </div>
 
 
@@ -517,6 +517,107 @@
         </section>
 
         <!-- Feedback part end -->
+        <!-- FAQ part start -->
+
+        <section>
+            <div class="title my-5 text-center">
+                <h1 class="mb-3">Frequently Asked Questions
+                </h1>
+                <p class="w-50 text-center m-auto">One of the best and most accessible forms of technology is the mobile
+                    phone
+                    or, more
+                    precisely, the
+                    smartphone. A smartphone is a phone which can connect to the internet. They have many advanced
+                    features in a phone and are a very good example of technology.</p>
+            </div>
+            <div class="main-part w-50 m-auto">
+                <div class="accordion" id="accordionExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button fw-bold fs-5 text-black-50" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true"
+                                aria-controls="collapseOne">
+                                What is the difference between css flexbox and grid?
+                            </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                The basic difference between CSS Grid Layout and CSS Flexbox Layout is that flexbox was
+                                designed for layout in one dimension - either a row or a column. Grid was designed for
+                                two-dimensional layout - rows, and columns at the same time. The two specifications
+                                share some common features, however, and if you have already learned how to use flexbox,
+                                the similarities should help you get to grips with Grid.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingTwo">
+                            <button class="accordion-button collapsed fw-bold fs-5 text-black-50" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
+                                aria-controls="collapseTwo">
+                                What is the difference between Bootstrap and Tailwind?
+                            </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                Developers describe Bootstrap as "Simple and flexible HTML, CSS, and JS for popular UI
+                                components and interactions". Bootstrap is the most popular HTML, CSS, and JS framework
+                                for developing responsive, mobile first projects on the web. On the other hand, Tailwind
+                                CSS is detailed as "A utility-first CSS framework for rapid UI development". Tailwind is
+                                different from frameworks like Bootstrap, Foundation, or Bulma in that it's not a UI
+                                kit. It doesn't have a default theme, and there are no build-in UI components. It comes
+                                with a menu of predesigned widgets to build your site with, but doesn't impose design
+                                decisions that are difficult to undo.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed fw-bold fs-5 text-black-50" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
+                                aria-controls="collapseThree">
+                                What is css box model?
+                            </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                When laying out a document, the browser's rendering engine represents each element as a
+                                rectangular box according to the standard CSS basic box model. CSS determines the size,
+                                position, and properties (color, background, border size, etc.) of these boxes.
+
+                                Every box is composed of four parts (or areas), defined by their respective edges: the
+                                content edge, padding edge, border edge, and margin edge.
+
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingFour">
+                            <button class="accordion-button collapsed fw-bold fs-5 text-black-50" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false"
+                                aria-controls="collapseFour">
+                                What is html semantic tag?
+                            </button>
+                        </h2>
+                        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                A great deal of web content can be made accessible just by making sure the correct
+                                Hypertext Markup Language elements are used for the correct purpose at all times. This
+                                article looks in detail at how HTML can be used to ensure maximum accessibility.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- FAQ part end -->
     </main>
 
 
