--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
         <!-- Feedback part end -->
         <!-- FAQ part start -->
 
-        <section>
+        <section class="mb-5">
             <div class="title my-5 text-center">
                 <h1 class="mb-3">Frequently Asked Questions
                 </h1>
@@ -618,6 +618,25 @@
         </section>
 
         <!-- FAQ part end -->
+        <!-- Logo part Start -->
+        <section class="mt-5 d-none d-lg-block">
+            <div class="container">
+                <div class="title text-center">
+                    <h1 class="fs-1 fw-bold">Trusted by over 800+ companies</h1>
+                </div>
+                <div class="logo d-flex align-items-center justify-content-between my-5">
+                    <div class="img"><img src="images/company/company-1.png" alt=""></div>
+                    <div class="img"><img src="images/company/company-2.png" alt=""></div>
+                    <div class="img"><img src="images/company/company-3.png" alt=""></div>
+                    <div class="img"><img src="images/company/company-4.png" alt=""></div>
+                    <div class="img"><img src="images/company/company-5.png" alt=""></div>
+                    <div class="img"><img src="images/company/company-6.png" alt=""></div>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- Logo part end -->
     </main>
 
 
