--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
 
         <!-- FAQ part end -->
         <!-- Logo part Start -->
-        <section class="mt-5 d-none d-lg-block">
+        <section class="my-5 py-5 d-none d-lg-block">
             <div class="container">
                 <div class="title text-center">
                     <h1 class="fs-1 fw-bold">Trusted by over 800+ companies</h1>
@@ -638,6 +638,20 @@
 
         <!-- Logo part end -->
     </main>
+
+    <!-- Footer part -->
+
+    <footer class="text-center py-5 bg-dark text-white">
+        <h1 class="my-5">Westside Tech</h1>
+        <p class="w-15 ">Office 41, Zawaya Buildin, Ghala Muscat,<br>Sultanate of Oman</p>
+        <p>Privacy Ploicy | Terms of use</p>
+        <div class="icon">
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-linkedin"></i>
+        </div>
+    </footer>
 
 
 
