--- a/index.html
+++ b/index.html
@@ -277,43 +277,52 @@
         <!-- Explore part start -->
         <section class="mb-5">
             <div class="container">
-                <div class="main d-md-flex align-items-center rounded bg-info">
-                    <div class="left">
-                        <img src="images/working.png" class="prob" alt="">
-                    </div>
-                    <div class="right p-5">
-                        <h1 class="mb-3">Explore The elearning
-                            Institute</h1>
-                        <p>
-                            There are many variations of passages of Lorem Ipsum available, but the
-                            majority have suffered alteration in some form, by injected humour, or
-                            randomised words which don't look even slightly believable. If you are going
-                            to use a passage of Lorem Ipsum, you need to be sure.
+                <div class="main bg-info rounded">
+                    <div class="row">
+                        <div class="col-lg-5 col-md-12 col-sm-12">
+                            <div class="left text-center">
+                                <img src="images/working.png" class="img-fluid" alt="">
+                            </div>
+
+                        </div>
+                        <div class="col-lg-7 col-md-12 col-sm-12">
+                            <div class="right p-5 align-items-center">
+                                <h1 class="mb-3">Explore The elearning
+                                    Institute</h1>
+                                <p>
+                                    There are many variations of passages of Lorem Ipsum available, but the
+                                    majority have suffered alteration in some form, by injected humour, or
+                                    randomised words which don't look even slightly believable. If you are going
+                                    to use a passage of Lorem Ipsum, you need to be sure.
 
 
-                            Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
-                            generators on the Internet tend to repeat predefined
-                        </p>
-                        <div class="number d-flex my-md-5">
-                            <div class="one me-3">
-                                <h1 class="fw-bold">3.2K+</h1>
-                                <p>Online Course
+                                    Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
+                                    generators on the Internet tend to repeat predefined
                                 </p>
-                            </div>
-                            <div class="one mx-3">
-                                <h1 class="fw-bold">600+</h1>
-                                <p>Student
-                                </p>
-                            </div>
-                            <div class="one mx-3">
-                                <h1 class="fw-bold">1K+</h1>
-                                <p>Rating & Review
-                                </p>
+                                <div class="number d-flex my-md-5">
+                                    <div class="one me-3">
+                                        <h1 class="fw-bold">3.2K+</h1>
+                                        <p>Online Course
+                                        </p>
+                                    </div>
+                                    <div class="one mx-3">
+                                        <h1 class="fw-bold">600+</h1>
+                                        <p>Student
+                                        </p>
+                                    </div>
+                                    <div class="one mx-3">
+                                        <h1 class="fw-bold">1K+</h1>
+                                        <p>Rating & Review
+                                        </p>
+                                    </div>
+                                </div>
+                                <button class="btn px-4 py-2 border text-white bg-dark">Read More</button>
                             </div>
                         </div>
-                        <button class="btn px-4 py-2 border text-white bg-dark">Read More</button>
                     </div>
                 </div>
+
+
             </div>
         </section>
 
