--- a/index.html
+++ b/index.html
@@ -73,68 +73,66 @@
 
         <section>
             <div class="container">
-                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
 
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item active w-100">
-                            <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-md-block mb-md-5">
+                        <div class="carousel-item active slide">
+                            <div class="overlay text-white text-center">
                                 <h5 class="fs-1 fs-sm-5 fw-bold top">Technology is all around you</h5>
-                                <p class="w-75 m-auto fs-6 mb-5">When we look around us, we see a huge number of
-                                    examples of
-                                    technology.
-                                    The mobile
+                                <p class="w-75 m-auto fs-6 my-5">Things that used to take hours to complete can now be
+                                    completed in a matter of minutes because of technologyng.
                                 </p>
                                 <a class="text-decoration-none text-white px-5 py-3 bg-primary rounded fs-5"
                                     href="#">Get
                                     Started
                                 </a>
                             </div>
+                            <img src="images/cover/cover-1.png" class="d-block w-100 h-100" alt="...">
                         </div>
-                        <div class="carousel-item active w-100">
-                            <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-md-block mb-md-5">
+                        <div class="carousel-item slide">
+                            <div class="overlay text-white text-center">
                                 <h5 class="fs-1 fs-sm-5 fw-bold top">Technology is all around you</h5>
-                                <p class="w-75 m-auto fs-6 mb-5">When we look around us, we see a huge number of
-                                    examples of
-                                    technology.
-                                    The mobile
+                                <p class="w-75 m-auto fs-6 my-5">Things that used to take hours to complete can now be
+                                    completed in a matter of minutes because of technologyng.
                                 </p>
                                 <a class="text-decoration-none text-white px-5 py-3 bg-primary rounded fs-5"
                                     href="#">Get
                                     Started
                                 </a>
                             </div>
+                            <img src="images/cover/cover-3.jpg" class="d-block w-100 h-100" alt="...">
                         </div>
-                        <div class="carousel-item active w-100">
-                            <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-md-block mb-md-5">
+                        <div class="carousel-item slide">
+                            <div class="overlay text-white text-center">
                                 <h5 class="fs-1 fs-sm-5 fw-bold top">Technology is all around you</h5>
-                                <p class="w-75 m-auto fs-6 mb-5">When we look around us, we see a huge number of
-                                    examples of
-                                    technology.
-                                    The mobile
+                                <p class="w-75 m-auto fs-6 my-5">Things that used to take hours to complete can now be
+                                    completed in a matter of minutes because of technologyng.
                                 </p>
                                 <a class="text-decoration-none text-white px-5 py-3 bg-primary rounded fs-5"
                                     href="#">Get
                                     Started
                                 </a>
                             </div>
+                            <img src="images/cover/cover-3.jpg" class="d-block w-100 h-100" alt="...">
                         </div>
-
 
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
                         data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
                         data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
+
+
+
+
+
             </div>
         </section>
         <!-- banner part end -->
@@ -277,7 +275,7 @@
         <!-- Explore part start -->
         <section class="mb-5">
             <div class="container">
-                <div class="main bg-info rounded">
+                <div class="main bg-info round">
                     <div class="row">
                         <div class="col-lg-5 col-md-12 col-sm-12">
                             <div class="left text-center">
@@ -290,14 +288,9 @@
                                 <h1 class="mb-3">Explore The elearning
                                     Institute</h1>
                                 <p>
-                                    There are many variations of passages of Lorem Ipsum available, but the
-                                    majority have suffered alteration in some form, by injected humour, or
-                                    randomised words which don't look even slightly believable. If you are going
-                                    to use a passage of Lorem Ipsum, you need to be sure.
-
-
-                                    Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
-                                    generators on the Internet tend to repeat predefined
+                                    Things that used to take hours to complete can now be completed in a matter of
+                                    minutes because of technology. Everything is just a click away, including banking,
+                                    sending e-mail, assignments, and even shopping.
                                 </p>
                                 <div class="number d-flex my-md-5">
                                     <div class="one me-3">
